# test-slack-app

./: Dockerfile  pyproject.toml
test_slack_app/: main.py  settings.py
