[tool.poetry]
name = "test-slack-app"
version = "0.1.0"
description = ""
authors = ["ichi_taro3 <taro3.ichi@gmail.com>"]
readme = "README.md"
packages = [{include = "test_slack_app"}]

[tool.poetry.dependencies]
python = "^3.11"
slack-bolt = "^1.18.0"
aiohttp = "^3.8.4"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
gunicorn = "^20.1.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
